update static route

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
   <title>Register a Voter!</title>
   <link rel="stylesheet" href="css/uswds.css" />
-  <link rel='shortcut icon' type='image/x-icon' href='assets/img/favicon.ico' />
+  <link rel="shortcut icon" type="image/x-icon" href="../static/favicon.ico" />
 </head>
 
 <body>
